--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -6,17 +6,17 @@
 
 .column1of2 {
 float: left;
-width: 650px;
-margin: 10px;
-padding: 5px;
+width: 55%;
+margin: 1em;
+padding: .5em;
 clear: left;
 }
 
 .column2of2 {
 float: left;
-width: 300px;
-margin: 10px;
-padding: 5px;
+width: 25%;
+margin: 1em;
+padding: .5em;
 }
 
 
