Updated missed items from wk 2

--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -7,7 +7,7 @@ body {
 	 }
 	 
 @font-face {
-			font-family:Ubuntu;
+			font-family:Ubuntu, Arial, Sans-Serif;
 		
 			}
 
@@ -54,6 +54,10 @@ body {
 	font-size: 80%;
 	text-align: left;
 	}
+	
+p {
+	line-height: 1.3em;
+		}
 
 ul li {
 	margin: 5px;
