--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -4,7 +4,7 @@
 body {
 	 background-color: #FFFFFF; 
 	 opacity: 1;
-	 width: 960px;
+	 width: 80%;
 	 }
 	 
 @font-face {
@@ -14,7 +14,7 @@ body {
 
 div {
 		
-		margin: 10px;
+		margin: 1%;
 		border-width: 5px;
 		border-color: #000000;
 		background-color: #79B397; 
@@ -25,7 +25,7 @@ div {
 
  #secondary, #images_column{
 	float:left;
-	width: 400px;
+	width: 40%;
 	padding: 5px;
 	}
 
@@ -42,12 +42,12 @@ h1, h2 {
 		}
 
 h1 {
-	font-size: 38px;
+	font-size: 2.375em;
 	font-weight: Bold;
 	}
 
 h2 {
-	font-size: 24px;
+	font-size: 1.5em;
 	font-style: Italic;
 	
 	}
