--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -2,61 +2,72 @@
 
 /* Main Style information */
 body {
-	 background: #FFFFFF; 
-	 opacity: 1;
-	 width: 80%;
+	background-image: url("../images/light-tile.gif");
+	background-repeat: repeat y;
+	background-position: center left;
 	 }
 	 
 @font-face {
 			font-family:Ubuntu, Arial, Sans-Serif;
 		
 			}
-/* #wrapper {
-	background-image: -webkit-linear-gradient(#e9f6fd, #d3eefb);
+			
+			
+.wrapper {
 	
-
-	} */
-
-
-div {
-		
-		margin: 1%;
-		border-width: 5px;
-		border-color: #000000;
-	    /*background-color: #79B397;*/
-		background-image: -webkit-linear-gradient(#e9f6fd, #d3eefb);
-		border-radius: 10px;
-		-moz-border-radius: 4;
-		box-shadow: -2px -3px #777777;
-	}	
-
- #secondary, #images_column{
-	float:left;
-	width: 40%;
-	padding: 5px;
+	width: 960px;
+	margin: 20px auto 20px auto;
+	background-color: #fff; 
+	border-radius: 10px;
+	-moz-border-radius: 4;
+	box-shadow: -2px -3px #777777;	
+	border-width: 5px;
+	border-color: #000000;
+	
 	}
 
+
+	
+	
+ section{
+	float:left;
+	width: 56%;
+	padding: 5px;
+	border-radius: 10px;
+	-moz-border-radius: 4;
+	box-shadow: -2px -3px #777777;
+	margin: 2%;
+	border-width: 5px;
+	border-color: #000000;
+	}
+
+aside{
+	float:left;
+	width: 30%;
+	padding: 5px;
+	border-radius: 10px;
+	-moz-border-radius: 4;
+	box-shadow: -2px -3px #777777;
+	margin: 1%;
+	border-width: 5px;
+	border-color: #000000;
+	background-image: -webkit-linear-gradient(#e9f6fd, #d3eefb);
+	}	
+	
+nav, footer {
+	clear: both;
+	background-color: #fff;
+	height: 30px;
+	}
+	
+
 /* Background Images  */
-#images_column {
+section {
 	background-image: url("../images/pattern_038.gif");
 	background-repeat: no repeat;
 	background-position: center top;
 
 	}
-
-#secondary {
-	background-image: url("../images/light-tile.gif");
-	background-repeat: repeat y;
-	background-position: center left;
-
-	}
-
-/* Gradient Background */
-
-
-
-
-
 
 
 /* Heading and body Style information */
@@ -80,9 +91,6 @@ h2 {
 	font-style: Italic;
 	
 	}
-h3 {
-	color: #000000;
-		}
 
 body {
 	font-family: Arial, Sans-Serif;
