--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -16,7 +16,7 @@ body {
 	
 	width: 960px;
 	margin: 20px auto 20px auto;
-	background-color: #fff; 
+	background-color: #f5f5f0; 
 	border-radius: 10px;
 	-moz-border-radius: 4;
 	box-shadow: -2px -3px #777777;	
@@ -36,6 +36,7 @@ body {
 	margin: 2%;
 	border-width: 5px;
 	border-color: #000000;
+	clear: both;
 	}
 
 aside{
@@ -53,7 +54,7 @@ aside{
 	
 nav, footer {
 	clear: both;
-	background-color: #fff;
+	background-color: #f5f5f0;
 	height: 30px;
 	padding: 5px;
 	}
@@ -96,7 +97,19 @@ tr:hover {
 	
 /* Form Styles */
 
+form {
+	background-color: #f6f6f1;
+	width:400px ;
 
+	}
+
+.title {
+	float: left;
+	width: 75px;
+	text-align: left;
+	padding-right: 5px;
+	
+	}
 
 
 /* Heading and body Style information */
