--- a/project1/css/styles.css
+++ b/project1/css/styles.css
@@ -3,8 +3,9 @@
 /* Main Style information */
 body {
 	background-image: url("../images/light-tile.gif");
-	background-repeat: repeat y;
+	background-repeat: repeat;
 	background-position: center left;
+	background-attachment: fixed;
 	 }
 	 
 @font-face {
@@ -63,7 +64,7 @@ nav, footer {
 /* Background Images  */
 section {
 	background-image: url("../images/pattern_038.gif");
-	background-repeat: no repeat;
+	background-repeat: repeat;
 	background-position: center top;
 
 	}
