--- a/DWS1-practical/css/main.css
+++ b/DWS1-practical/css/main.css
@@ -8,3 +8,34 @@ body {
 	background: #797267;
 }
 
+
+/*------ Header and Nav -----*/
+
+
+
+
+
+/*------ Main Content -----*/
+
+
+
+
+
+
+
+/*------ Section -----*/
+
+
+
+
+
+
+
+
+/*------ Footer -----*/
+
+
+
+
+
+/*------ Image -----*/
