--- a/DWS1-practical/css/main.css
+++ b/DWS1-practical/css/main.css
@@ -109,9 +109,10 @@ ul li {
 img{
 	border: 5px solid #fff;
 	margin: 5px;
-	text-align: middle;
+	width: 70px;
 	
 }
+
 
 /*------ Footer -----*/
 footer{
@@ -126,7 +127,7 @@ footer{
 h1 {
 	text-indent: -9999px;
 	width: 960px;
-	magin: 0px;
+
 }
 
 h2 {
